<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/containerLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="@dimen/size_4dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/backButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_back"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:tint="@color/colorIconsSecondary" />

                <TextView
                    android:id="@+id/toolbarTitleView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/size_16dp"
                    android:layout_marginEnd="@dimen/size_16dp"
                    android:ellipsize="end"
                    android:fontFamily="@font/helvetica_bold"
                    android:lines="1"
                    android:textColor="@color/textColorPrimary"
                    android:textSize="@dimen/textsize_20sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/addTaskButton"
                    app:layout_constraintStart_toEndOf="@+id/backButton"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="Desk name" />

                <TextView
                    android:id="@+id/addTaskButton"
                    style="@style/KanbatTheme.BorderedSmallButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/size_16dp"
                    android:text="@string/str_save_button"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="1.0" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/appBarLayout">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/size_16dp"
            android:paddingEnd="@dimen/size_16dp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/taskInputLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size_16dp"
                android:background="@android:color/transparent"
                android:hint="@string/str_hint_input_task"
                android:textColorHint="@color/textColorTertiary"
                app:boxBackgroundColor="@android:color/transparent"
                app:boxBackgroundMode="none"
                app:errorEnabled="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/taskInputEditText"
                    style="@style/KanbatTheme.TextInputStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionNext"
                    android:inputType="textAutoCorrect|textMultiLine|textAutoComplete"
                    android:paddingStart="0dp"
                    android:paddingEnd="0dp"
                    android:textColorHint="@color/textColorTertiary" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/createCheckListTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:fontFamily="@font/helvetica"
                android:lines="1"
                android:text="@string/str_create_check_list"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/textsize_14sp"
                app:layout_constraintBottom_toBottomOf="@+id/addPointButton"
                app:layout_constraintEnd_toStartOf="@+id/addPointButton"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/addPointButton" />

            <ImageView
                android:id="@+id/addPointButton"
                android:layout_width="@dimen/size_40dp"
                android:layout_height="@dimen/size_40dp"
                android:layout_marginTop="@dimen/size_24dp"
                android:background="?attr/selectableItemBackground"
                android:padding="@dimen/size_8dp"
                android:src="@drawable/ic_add"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/taskInputLayout"
                app:tint="@color/colorAccent" />

            <LinearLayout
                android:id="@+id/pointsContainerLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/addPointButton" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>